--- a/pom.xml
+++ b/pom.xml
@@ -75,5 +75,11 @@
           <type>jar</type>
           <scope>compile</scope>
       </dependency>
+
+<dependency>
+    <groupId>com.amazonaws</groupId>
+    <artifactId>aws-java-sdk</artifactId>
+    <version>1.3.14</version>
+</dependency>
   </dependencies>
 </project>
