introduced S3Sink. added brokerid to Configuration. prefix s3 key of chunks with brokerid. buffer chunks as files. fixed logging.

--- a/src/main/resources/template.properties
+++ b/src/main/resources/template.properties
@@ -1,8 +1,8 @@
 # Kafka settings
 kafka.host=127.0.0.1
 kafka.port=9092
-kafka.topic=test
-kafka.topic.partitions=1
+kafka.brokerid=0
+kafka.topics=test:1
 
 # S3 settings
 s3.accesskey=
