--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,2 +1,5 @@
+log4j.rootLogger=DEBUG, console
 
-log4j.rootLogger=INFO
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
